WIP: interpose with manifest and multi-stage build

--- a/simulator/esx/mock-image/.devcontainer.json
+++ b/simulator/esx/mock-image/.devcontainer.json
@@ -1,3 +1,7 @@
 {
-    "build": { "dockerfile": "Dockerfile" }
+    "name": "vcsim-interpose-devcontainer",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": "."
+    }
 }
