Support interpose on execution in container backed mocks
This adds the basic pattern for intercepting executions inside a container backing.

This consists of:
* binary that replaces the target in the container image and will call out to vcsim for instruction prior to invoking the original binary
* configuration file indicating where to talk to vcism
* vcsim parts to accept an incoming connection from the interpose binary and deserialize the attempted invocation.
* methods on host and containers in vcism to manipulate the config.

The communication protocol between mock and vcsim is SSH. This was chosen as it's primary design intent was to support invocation of commands on remote systems, and relay of input/output/status.

This does NOT currently provide any of the mechanisms by which a test case can register interest in interpositions and intercept calls.

--- a/simulator/esx/mock-image/Dockerfile
+++ b/simulator/esx/mock-image/Dockerfile
@@ -1,23 +1,21 @@
 # golang:1.18.0-buster amd64
 FROM golang:1.19 AS interpose-build
 
-WORKDIR /usr/local/go/src/app
+
+ENV GOROOT=/usr/local/go/
+
+WORKDIR ${GOPATH}
+
 RUN go install github.com/go-delve/delve/cmd/dlv@latest
 
-ADD . .
-RUN go build -o interpose app/cmd/interpose
+ADD . src/github.com/vmware/govmomi/
+RUN cd src/github.com/vmware/govmomi/ && go mod tidy
+
+RUN cd src/github.com/vmware/govmomi/ && go build -o interpose ./simulator/esx/mock-image/cmd/interpose
 
 
 # construct the mock-esx filesystem
 FROM photon:5.0  AS rpm-installer
-
-COPY --from=interpose-build /go/bin/dlv /go/bin/
-COPY --from=interpose-build /usr/local/go/src/app/interpose /opt/
-
-#COPY mocks /.shadow/overrides
-COPY esx-filesystem-manifest.json /opt/
-# TODO: remove direct tdnf invocation once the interpose installer logic is done
-#RUN /opt/interpose --install --target / --default-source /.shadow/content --override-source /.shadow/overrides --config /opt/esx-filesystem-manifest.json
 
 RUN tdnf makecache && tdnf -y update && tdnf install -y rpm
 
@@ -30,6 +28,15 @@ RUN cd /mnt/shadow/base && rpm2cpio /download/glibc-2*.rpm | cpio -idmu && rpm2c
 RUN tdnf install -y --installroot /mnt/shadow/extras --releasever=5.0 toybox bash
 
 RUN rm -fr /mnt/shadow/{base,extras}/var/cache/tdnf
+
+# TODO: remove direct tdnf invocation once the interpose installer logic is done
+
+COPY --from=interpose-build /go/bin/dlv /go/bin/
+COPY --from=interpose-build /go/src/github.com/vmware/govmomi/interpose /opt/
+
+#COPY mocks /.shadow/overrides
+COPY simulator/esx/mock-image/esx-filesystem-manifest.json /opt/
+#RUN /opt/interpose --install --target / --default-source /.shadow/content --override-source /.shadow/overrides --config /opt/esx-filesystem-manifest.json
 
 
 FROM scratch
@@ -48,7 +55,7 @@ COPY --from=interpose-build /go/bin/dlv /.shadow/content/go/bin/
 
 # bootstrap the utils needed to create symlinks instead of copies.
 # "ln" first as we use invocation name to determine function in toybox, and "ln" allows us to determine that.
-COPY --from=interpose-build /usr/local/go/src/app/interpose /bin/ln
+COPY --from=interpose-build /go/src/github.com/vmware/govmomi/interpose /bin/ln
 # RUN [...] avoids the "/bin/sh" interpreter wrapping as we don't currently have a /bin/sh to wrap with
 RUN [ "/bin/ln", "/bin/ln", "/.shadow/meta/interpose" ]
 RUN [ "/bin/ln", "-s", "/.shadow/meta/interpose", "/bin/sh" ]
@@ -56,9 +63,9 @@ RUN [ "/bin/ln", "-s", "/.shadow/meta/interpose", "/bin/sh" ]
 # TODO: figure out which of these is needed after manifest is in place.
 # This pivots the "ln" from being a hardlink to a symlink after it's been used to place the interpose binary
 # Wouldn't bother but inspecting inodes shows that hardlinks are being broken by the Dockerbuild layers for some reason
-RUN for i in /usr/bin/{ln,ls,toybox,du,rm}; do ln -sf /.shadow/meta/interpose $i;done
+RUN for i in /usr/bin/{ln,mkdir,ls,toybox,du,rm,sleep,}; do ln -sf /.shadow/meta/interpose $i;done
 
-COPY *.json /.shadow/meta/
+COPY simulator/esx/mock-image/*.json /.shadow/meta/
 
 
 #TODO: figure out if we need to/how we can/ run multiple processes in the 'host'
@@ -74,4 +81,4 @@ COPY *.json /.shadow/meta/
 # provides an easy way to say; this command gets directed back to test harness, run this script, etc.
 #? will this be an issue from a process tree standpoint? Maybe - if necessary, some commands could result in a backflow of logic, whether a socket to use, command to execve with, etc.
 
-ENTRYPOINT [ "/bin/sh" ]
+ENTRYPOINT [ ]
