--- a/simulator/esx/mock-image/esx-filesystem-manifest.json
+++ b/simulator/esx/mock-image/esx-filesystem-manifest.json
@@ -3,7 +3,7 @@
         "log": "console",
         "lddFixup": "true",
         "targetPrefix": "/.shadow/content",
-        "mockPrefix": "/.shadow/content", // do we need a separate mock path? Is it useful?
+        "mockPrefix": "/.shadow/mock",
 
         "files": [
             { "invocation": "/usr/bin/toybox", "target": "/usr/bin/toybox" },
